# detstream

./: .dockerignore  .gitignore  README.md  pyproject.toml
detstream/: config.py  events.py  registry.py  runner.py  state.py
detstream/detectors/: __init__.py  rf_detr.py  yoloe.py
detstream/sinks/: __init__.py  supabase.py
detstream/sources/: __init__.py  file_device.py  stream.py  youtube.py
examples/: eagles.yaml  otters.yaml  roboflow.yaml
src/detstream/: __init__.py  __main__.py  annotate.py  config.py  runner.py  state.py
src/detstream/detectors/: roboflow.py  yolo_world.py
src/detstream/sinks/: __init__.py  clips.py  comment.py  console.py  dataset.py  discord.py  supabase.py
src/detstream/sources/: youtube.py
tests/: test_clips.py  test_config.py  test_detectors.py  test_registry.py  test_roboflow.py  test_runner.py  test_sinks.py  test_sources.py  test_state.py
