[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "detstream"
version = "0.1.3"
description = "Modular object detection for live video feeds"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "catherinepereira" }]
keywords = ["object-detection", "video", "streaming", "yolo", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.urls]
Repository = "https://github.com/catherinepereira/detstream"
"Bug Tracker" = "https://github.com/catherinepereira/detstream/issues"

[project.optional-dependencies]
# The built-in YOLO-World detector. Kept optional so a deployment using only a
# custom detector plugin does not pull torch. YOLO-World also needs CLIP. ultralytics
# installs it on first use, so it is not pinned here (a git dependency would block
# publishing to PyPI)
yolo = [
    "ultralytics>=8.3.0",
    "torch>=2.2.0",
]
# yt-dlp resolves YouTube to an HLS manifest. It runs YouTube's player JS to solve the
# stream challenge, so it needs the deno runtime; the deno package ships that binary on
# PATH. yt-dlp must be recent enough to know the remote_components option
youtube = ["yt-dlp>=2026.03.17", "deno>=2.8.0"]
supabase = ["supabase>=2.4.0"]
# The roboflow detector runs a Roboflow Workflow through the hosted inference API
roboflow = ["inference-sdk>=1.3.0"]
# The rf-detr detector runs RF-DETR locally. rfdetr declares its own torch pin, so it is
# not repeated here
rf-detr = ["rfdetr>=1.8.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
detstream = "detstream.__main__:main"

# Built-in components self-register on import. Third-party plugins declare entries in
# these same groups so installing the plugin makes its components usable by name in
# config, with no change to detstream
[project.entry-points."detstream.sources"]
[project.entry-points."detstream.detectors"]
[project.entry-points."detstream.sinks"]

[tool.setuptools.packages.find]
where = ["src"]
